--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 	<name>myweb Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<!-- This is comment in XML-->
+	<!-- This is comment in XML-->
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
